implemented instagram api and blog generator

--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -4,7 +4,7 @@
       <div class="col-sm-7">
         <div class="header-content">
           <div class="header-content-inner">
-            <h1>Triathlete in training! Follow me on my journey where this Gazelle hits the water and the streets!</h1>
+            <h1>Triathlete in training!</h1>
             <a href="#download" class="btn btn-outline btn-xl page-scroll">Follow me on Instagram!</a>
           </div>
         </div>
