--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>Barbelle Gazelle</title>
-  <%= stylesheet_link_tag 'new_age/manifest.css', media: 'all' %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-  <%= javascript_include_tag 'new_age/manifest.js' %>
+  <%= javascript_include_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
 <body id="page-top">
