--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -3,9 +3,9 @@
 <head>
   <title>Barbelle Gazelle</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+  
+  <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Gilda+Display|Lato" rel="stylesheet">
+  
   <%= javascript_include_tag 'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
