--- a/app/views/pages/_download.html.erb
+++ b/app/views/pages/_download.html.erb
@@ -2,12 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <h2 class="section-heading">Discover what all the buzz is about!</h2>
-        <p>Our app is available on any mobile device! Download now to get started!</p>
-        <div class="badges">
-            <a class="badge-link" href="#"><img src="/assets/new_age/google-play-badge.svg" alt=""></a>
-            <a class="badge-link" href="#"><img src="/assets/new_age/app-store-badge.svg" alt=""></a>
-        </div>
+        <h2 class="section-heading">Check out my progress!</h2>
+        <p>Mom of two, training in all three disciplines and improving daily!</p>
+        
       </div>
     </div>
   </div>
