--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -14,11 +14,9 @@
           <div class="device-mockup iphone6_plus portrait white">
             <div class="device">
               <div class="screen">
-                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="/assets/new_age/Instagram_pic_tabby.jpg" class="img-responsive" alt="">
+                <%= image_tag "Instagram_pic_tabby.jpg", class: "img-responsive"  %>
               </div>
               <div class="button">
-                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
               </div>
             </div>
           </div>
