--- a/app/views/pages/_navigation.html.erb
+++ b/app/views/pages/_navigation.html.erb
@@ -5,20 +5,20 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Barbelle Gazelle</a>
+      <a class="navbar-brand page-scroll" href="#page-top">Barbell Gazelle</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="">
-            <a class="page-scroll" href="#download">Download</a>
+            <a class="page-scroll" href="#download"></a>
         </li>
         <li class="">
-            <a class="page-scroll" href="#features">Features</a>
+            <a class="page-scroll" href="#features">Instagram</a>
         </li>
         <li class="">
-            <a class="page-scroll" href="#contact">Contact</a>
+            <a class="page-scroll" href="#contact">Follow Me</a>
         </li>
       </ul>
     </div>
