fininshed instagram implementation

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -317,9 +317,11 @@ section.features .section-heading {
 }
 section.features .section-heading h2 {
   margin-top: 0;
+  color: red;
 }
 section.features .section-heading p {
   margin-bottom: 0;
+  color: red;
 }
 section.features .device-container,
 section.features .feature-item {
