Implemented paperclip gem for image uploading in blogs

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -454,9 +454,9 @@ footer ul li a.active {
   text-decoration: none;
 }
 .bg-primary {
-  background: #fdcc52;
-  background: -webkit-linear-gradient(#fdcc52, #52fd5a);
-  background: linear-gradient(#fdcc52, #52fd5a);
+  background: #52ebfd;
+  background: -webkit-linear-gradient(#52ebfd, #52ebfd);
+  background: linear-gradient(#52ebfd, #52ebfd);
 }
 .text-primary {
   color: #fdcc52;
