--- a/app/views/pages/_download.html.erb
+++ b/app/views/pages/_download.html.erb
@@ -4,7 +4,7 @@
       <div class="col-md-8 col-md-offset-2">
         <h2 class="section-heading">Check out my progress!</h2>
         <p>Mom of two, training in all three disciplines and improving daily!</p>
-        
+        <%= render :file => 'blogs/index' %>
       </div>
     </div>
   </div>
